# owid-covid-dashboard

./: README.md  app.py  pyproject.toml  requirements.txt
components/: bar_plots.py  box_plots.py  choropleths.py  graph.py  heatmaps.py  histograms.py  line_graphs.py  scatter_plots.py
data/: .gitignore
notebooks/: .gitignore  Covid19_EDA.ipynb
static/: typography.css
utils/: data_engine.py  kpi.py
