[project]
name = "datavisualization-groupassessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=2.0.4",
    "kagglehub>=1.0.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
]
